tests/pass/0051_if_else_taken.ee
fn main() {
    if (false) {
        debugPrint(1);
    } else {
        debugPrint(2);
    }
}
