tests/fail/0031_unknown_variable_in_taken_else_branch.ee
fn main() {
    if (false) {
        debugPrint(1);
    } else {
        debugPrint(missing);
    }
}
